Refactor: move FruitTransaction to model package and fix imports